--- a/Home.html
+++ b/Home.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -726,7 +726,7 @@
                             <img src="Images/demo-corporate-03.png" alt="">
                             <img src="Images/aboutus.jpg"
                                 style="border-radius: 25px; box-shadow: 2px 2px 4px rgba(0,0,0,0.4)"
-                                class="position-absolute top-50 left-minus-100px lg-left-minus-40px sm-left-minus-30px lg-w-50 sm-w-55"
+                                class="aboutusimg position-absolute top-50 left-minus-100px lg-left-minus-40px sm-left-minus-30px lg-w-50 sm-w-55"
                                 data-bottom-top="transform: translateY(50px)"
                                 data-top-bottom="transform: translateY(-220px)" alt="">
                             <img src="Images/demo-corporate-02.png"
