--- a/Home/WhatMakesUsUnique.html
+++ b/Home/WhatMakesUsUnique.html
@@ -154,7 +154,7 @@
                     <div class="row align-items-center justify-content-center small-screen">
                         <div class="col-lg-8 position-relative text-center page-title-extra-large"
                             data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 600, "delay": 0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                            <h1 class="m-auto text-white text-shadow-double-large fw-600 ls-minus-2px">What Makes Us Unique
+                            <h1 class="m-auto text-white text-shadow-double-large fw-600 ls-minus-2px">Why Us Over All?
                             </h1>
                         </div>
                         <div class="down-section text-center"
