--- a/Home/Contact.html
+++ b/Home/Contact.html
@@ -55,7 +55,6 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item"><a href="../Home.html" class="nav-link">Home</a></li>
-                                <li class="nav-item"><a href="WhatMakesUsUnique.html" class="nav-link">Why Us Over All?</a></li>
                                 <li class="nav-item dropdown simple-dropdown">
                                     <a href="../ProviderServices.html" class="nav-link">Provider Services</a>
                                     <i class="fa-solid fa-angle-down dropdown-toggle" id="ProviderServicesLink"
@@ -116,6 +115,8 @@
                                         <li><a href="../PayerSolutions/MAO.html">HCC Coding & Medicare Advantage</a>
                                         </li>
                                     </ul>
+                                <li class="nav-item"><a href="WhatMakesUsUnique.html" class="nav-link">Why Us Over
+                                        All?</a></li>
 
                                 <li class="nav-item"><a href="Contact.html" class="nav-link">Contact</a></li>
                             </ul>
@@ -149,7 +150,7 @@
             <!-- start page title -->
             <section class="top-space-margin page-title-big-typography border-radius-6px lg-border-radius-0px p-0"
                 data-parallax-background-ratio="0.5"
-                style="background-image: url(../Images/pexels-yankrukov-7691730.jpg)">
+                style="background-image: url(../Images/pexels-yankrukov-7691740.jpg)">
                 <div class="opacity-extra-medium bg-blue-whale"></div>
                 <div class="container">
                     <div class="row align-items-center justify-content-center small-screen">
@@ -178,13 +179,15 @@
                             <span
                                 class="ps-25px pe-25px mb-20px text-uppercase text-base-color fs-14 lh-42px fw-700 border-radius-100px bg-gradient-very-light-gray-transparent d-inline-block">How
                                 can we help you?</span>
-                            <h3 class="text-dark-gray fw-700 ls-minus-1px mb-0"> Let's collaborate and create something amazing!! Ready to build?
+                            <h3 class="text-dark-gray fw-700 ls-minus-1px mb-0"> Let's collaborate and create something
+                                amazing!! Ready to build?
                             </h3>
                         </div>
                         <div class="col-xl-6 offset-xl-1 col-lg-5 col-md-10 last-paragraph-no-margin">
                             <p class="w-90 lg-w-100"
                                 data-anime='{ "el": "lines", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                                We are available to assist you and respond to any inquiries you may have.  Please get in touch with us if you need any assistance; we look forward to hearing from you.</p>
+                                We are available to assist you and respond to any inquiries you may have. Please get in
+                                touch with us if you need any assistance; we look forward to hearing from you.</p>
                         </div>
                     </div>
                     <div class="row row-cols-1 row-cols-xl-4 row-cols-lg-4 row-cols-md-2 row-cols-sm-2 mb-6 sm-mb-8"
@@ -260,7 +263,8 @@
                                     class="feature-box-content last-paragraph-no-margin text-white text-uppercase fs-15 fw-600 ls-05px xs-lh-24">
                                     Let's collaborate and create something amazing!!<a
                                         href="mailto:info@dynamicithealthcare.com"
-                                        class="text-white text-decoration-line-bottom-medium section-link"> Ready to build?</a>
+                                        class="text-white text-decoration-line-bottom-medium section-link"> Ready to
+                                        build?</a>
                                 </div>
                             </div>
                         </div>
