--- a/Home/WhatMakesUsUnique.html
+++ b/Home/WhatMakesUsUnique.html
@@ -55,7 +55,6 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item"><a href="../Home.html" class="nav-link">Home</a></li>
-                                <li class="nav-item"><a href="WhatMakesUsUnique.html" class="nav-link">Why Us Over All?</a></li>
                                 <li class="nav-item dropdown simple-dropdown">
                                     <a href="../ProviderServices.html" class="nav-link">Provider Services</a>
                                     <i class="fa-solid fa-angle-down dropdown-toggle" id="ProviderServicesLink"
@@ -116,6 +115,8 @@
                                         <li><a href="../PayerSolutions/MAO.html">HCC Coding & Medicare Advantage</a>
                                         </li>
                                     </ul>
+                                <li class="nav-item"><a href="WhatMakesUsUnique.html" class="nav-link">Why Us Over
+                                        All?</a></li>
 
                                 <li class="nav-item"><a href="Contact.html" class="nav-link">Contact</a></li>
                             </ul>
