--- a/Home/Contact.html
+++ b/Home/Contact.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -104,6 +104,7 @@
                                     <i class="fa-solid fa-angle-down dropdown-toggle" id="PayerSolutionsLink"
                                         role="button" data-bs-toggle="dropdown" aria-expanded="false"></i>
                                     <ul class="dropdown-menu" aria-labelledby="PayerSolutionsLink">
+                                        <li><a href="../PayerSolutions/MAO.html">HCC Coding & Medicare Advantage</a>
                                         <li><a href="../PayerSolutions/WorkmenCompensation.html">Workers' Compensation &
                                                 Auto Insurance</a></li>
                                         <li><a href="../PayerSolutions/MedicalReview.html">Medical Review & Claim
@@ -112,12 +113,10 @@
                                                 Services</a></li>
                                         <li><a href="../PayerSolutions/FormConversion.html">CMS-1500/UB-04 Elec. Data
                                                 Form Conversion</a></li>
-                                        <li><a href="../PayerSolutions/MAO.html">HCC Coding & Medicare Advantage</a>
                                         </li>
                                     </ul>
-                                <li class="nav-item"><a href="WhatMakesUsUnique.html" class="nav-link">Why Us Over
-                                        All?</a></li>
 
+                                    <li class="nav-item"><a href="WhatMakesUsUnique.html" class="nav-link">Why Us Over All?</a></li>
                                 <li class="nav-item"><a href="Contact.html" class="nav-link">Contact</a></li>
                             </ul>
                         </div>
@@ -150,7 +149,7 @@
             <!-- start page title -->
             <section class="top-space-margin page-title-big-typography border-radius-6px lg-border-radius-0px p-0"
                 data-parallax-background-ratio="0.5"
-                style="background-image: url(../Images/pexels-yankrukov-7691740.jpg)">
+                style="background-image: url(../Images/pexels-yankrukov-7691730.jpg)">
                 <div class="opacity-extra-medium bg-blue-whale"></div>
                 <div class="container">
                     <div class="row align-items-center justify-content-center small-screen">
@@ -179,15 +178,14 @@
                             <span
                                 class="ps-25px pe-25px mb-20px text-uppercase text-base-color fs-14 lh-42px fw-700 border-radius-100px bg-gradient-very-light-gray-transparent d-inline-block">How
                                 can we help you?</span>
-                            <h3 class="text-dark-gray fw-700 ls-minus-1px mb-0"> Let's collaborate and create something
-                                amazing!! Ready to build?
+                            <h3 class="text-dark-gray fw-700 ls-minus-1px mb-0">Have a project in mind? Get in touch!
                             </h3>
                         </div>
                         <div class="col-xl-6 offset-xl-1 col-lg-5 col-md-10 last-paragraph-no-margin">
                             <p class="w-90 lg-w-100"
                                 data-anime='{ "el": "lines", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                                We are available to assist you and respond to any inquiries you may have. Please get in
-                                touch with us if you need any assistance; we look forward to hearing from you.</p>
+                                We're here to help and answer any questions you might have. We look forward to hearing
+                                from you and if you need any help, please contact us.</p>
                         </div>
                     </div>
                     <div class="row row-cols-1 row-cols-xl-4 row-cols-lg-4 row-cols-md-2 row-cols-sm-2 mb-6 sm-mb-8"
@@ -242,33 +240,7 @@
                             your resume and a breif introduction.
                         </div>
                     </div>
-                    <div class="row row-cols-1 row-cols-xl-4 row-cols-lg-4 row-cols-md-2 row-cols-sm-2 mb-6 sm-mb-8"
-                        data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-
-                    </div>
-                    <div>
-                        <p class="font-style-italic">*** Please send all postal correspondence to the Corporate
-                            Headquarters.</p>
-                    </div>
-
-                    <div class="row justify-content-center g-0"
-                        data-anime='{ "el": "childs", "translateX": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 150, "easing": "easeOutQuad" }'>
-                        <div
-                            class="col-auto text-center last-paragraph-no-margin icon-with-text-style-08 pt-20px pb-20px ps-8 pe-8 md-ps-30px md-pe-30px bg-gradient-flamingo-amethyst-green border-radius-100px xs-border-radius-30px">
-                            <div class="feature-box feature-box-left-icon-middle overflow-hidden">
-                                <div class="feature-box-icon me-10px">
-                                    <i class="bi bi-chat-text fs-24 icon-very-medium text-white"></i>
-                                </div>
-                                <div
-                                    class="feature-box-content last-paragraph-no-margin text-white text-uppercase fs-15 fw-600 ls-05px xs-lh-24">
-                                    Let's collaborate and create something amazing!!<a
-                                        href="mailto:info@dynamicithealthcare.com"
-                                        class="text-white text-decoration-line-bottom-medium section-link"> Ready to
-                                        build?</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>
             </section>
             <!-- end section -->
@@ -276,11 +248,12 @@
             <section
                 class="position-relative one-half-screen sm-small-screen overflow-hidden border border-radius-top-lr lg-border-radius-0px"
                 data-parallax-background-ratio="0.5"
-                style="background-image: url(../Images/pexels-victor-silas-3670710-5496196.jpg)">
+                style="background-image: url(../Images/pexels-victor-silas-3670710-5496196.png)">
                 <div class="opacity-light bg-dark-gray"></div>
-                <div
-                    class="fs-225 ls-minus-10px alt-font text-gradient-orange-sky-blue fw-600 position-absolute left-minus-25px bottom-minus-50px sm-ls-minus-5px sm-bottom-minus-20px sm-fs-200 xs-left-minus-10px xs-fs-130">
-                    contact</div>
+                <div class="fs-225 ls-minus-10px alt-font fw-600 position-absolute left-minus-25px bottom-minus-50px sm-ls-minus-5px sm-bottom-minus-20px sm-fs-200 xs-left-minus-10px xs-fs-130" style="color: royalblue;">
+    contact
+</div>
+
             </section>
             <!-- end section -->
             <!-- start section -->
@@ -382,19 +355,21 @@
                         <!-- start footer column -->
                         <div
                             class="col-6 col-xl-3 col-lg-12 col-sm-6 last-paragraph-no-margin text-xl-start text-lg-center order-sm-1 lg-mb-50px sm-mb-30px">
-                            <a href="../Home.html" class="footer-logo mb-15px d-inline-block"><img
-                                    src="../Images/logo.jpg" alt="Dynamic IT Healthcare" style="min-height: 85px"></a>
+                            <a href="Home.html" class="footer-logo mb-15px d-inline-block"><img src="Images/logo.jpg"
+                                    alt="Dynamic IT Healthcare" style="min-height: 85px"></a>
                             <p class="lh-30 w-100 xl-w-100 mx-lg-auto mx-xl-0">New Perspectives. Global Success.</p>
                             <div class="elements-social social-icon-style-02 mt-20px xs-mt-15px">
                                 <ul class="medium-icon dark">
-                                    <li class="my-0"><a class="facebook" href="https://www.facebook.com/"
+                                    <li class="my-0"><a class="facebook"
+                                            href="https://www.facebook.com/"
                                             target="_blank" rel="noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
                                     </li>
-                                    <li class="my-0"><a class="linkedin" href="https://www.linkedin.com/company/"
+                                    <li class="my-0"><a class="linkedin"
+                                            href="https://www.linkedin.com/company/"
                                             target="_blank" rel="noreferrer"><i class="fa-brands fa-linkedin"></i></a>
                                     </li>
-                                    <li class="my-0"><a class="twitter" href="https://twitter.com/" target="_blank"
-                                            rel="noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
+                                    <li class="my-0"><a class="twitter" href="https://twitter.com/"
+                                            target="_blank" rel="noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
                                     </li>
                                     <!-- <li class="my-0"><a class="instagram" href="#"><i class="fa-brands fa-instagram"></i></a></li> -->
                                 </ul>
@@ -405,8 +380,8 @@
                         <div class="col-6 col-xl-2 col-lg-3 col-sm-4 xs-mb-30px order-sm-3 order-lg-2">
                             <span class="fs-17 fw-600 d-block text-dark-gray mb-5px">Company</span>
                             <ul>
-                                <li><a href="WhyChooseUs.html">Why Choose Us</a></li>
-                                <li><a href="Contact.html">Contact us</a></li>
+                                <li><a href="../Home/WhatMakesUsUnique.html">Why Us Over All?</a></li>
+                                <li><a href="Home/Contact.html">Contact us</a></li>
                             </ul>
                         </div>
                         <!-- end footer column -->
@@ -414,9 +389,9 @@
                         <div class="col-6 col-xl-2 col-lg-3 col-sm-4 xs-mb-30px order-sm-4 order-lg-3">
                             <span class="fs-17 fw-600 d-block text-dark-gray mb-5px">Services</span>
                             <ul>
-                                <li><a href="../ProviderServices.html">Provider Services</a></li>
-                                <li><a href="../PayerSolutions.html">Payer Solutions</a></li>
-                                <li><a href="../ProviderServices/LaboratoryServices.html">Laboratory Services</a></li>
+                                <li><a href="ProviderServices.html">Provider Services</a></li>
+                                <li><a href="PayerSolutions.html">Payer Solutions</a></li>
+                                <li><a href="ProviderServices/LaboratoryServices.html">Laboratory Services</a></li>
                             </ul>
                         </div>
                         <!-- end footer column -->
@@ -424,16 +399,16 @@
                         <div class="col-6 col-xl-2 col-lg-3 col-sm-4 xs-mb-30px order-sm-5 order-lg-4">
                             <span class="fs-17 fw-600 d-block text-dark-gray mb-5px">Customer</span>
                             <ul>
-                                <li><a href="PrivacyPolicy.html">Privacy policy</a></li>
-                                <li><a href="TermsAndConditions.html">Terms and conditions</a></li>
-                                <li><a href="Contact.html">Feedback</a></li>
+                                <li><a href="Home/PrivacyPolicy.html">Privacy policy</a></li>
+                                <li><a href="Home/TermsAndConditions.html">Terms and conditions</a></li>
+                                <li><a href="Home/Contact.html">Feedback</a></li>
                             </ul>
                         </div>
                         <!-- end footer column -->
                         <!-- start footer column -->
                         <div class="col-xl-3 col-lg-3 col-sm-6 md-mb-50px sm-mb-30px xs-mb-0 order-sm-2 order-lg-5"
                             style="margin-top:-20px">
-                            <img src="../Images/qrcode_dynamicithealthcare.com.png" alt="Dynamic IT Healthcare">
+                            <img src="Images/qrcode_dynamicithealthcare.com.png" alt="Dynamic IT Healthcare">
                         </div>
                         <!-- end footer column -->
                     </div>
@@ -454,7 +429,8 @@
                         <!-- start powered by -->
                         <div
                             class="col-lg-6 pt-35px pb-35px md-pt-0 order-3 order-lg-3 text-center text-lg-end last-paragraph-no-margin">
-                            <text>Powered by <a href="#" target="_blank" rel="noopener noreferrer"
+                            <text>Powered by <a href="#" target="_blank"
+                                    rel="noopener noreferrer"
                                     class="text-dark-gray fw-600 text-decoration-line-bottom">RamaMano</a></text>
                         </div>
                         <!-- end  powered by -->
