--- a/PayerSolutions.html
+++ b/PayerSolutions.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -214,13 +214,11 @@
 
 <p>Dynamic IT Healthcare delivers a comprehensive range of services, including configuration, front-end claims administration, adjudication, enrollment, and billing. With flexible and adaptable service delivery models, payers can utilize Dynamic IT Healthcare’s value-added services on an ongoing or as-needed basis, leveraging both on-site and offshore professionals.</p>
 
-<em class="fw-700 alt-font mb-20px d-block text-green text-decoration-underline">Several of our clients have realized cost savings of up to 30% in process-related services and 10% in overall administrative services.</em>
+
 
 
                             <div class="row align-items-center justify-content-center g-0">
                                 <div class="col-12 d-block d-sm-flex align-items-center text-center text-sm-start">
-                                    <img src="Images/pexels-janson-a-207878-753695.jpg"
-                                        style="border-radius: 5px; box-shadow: 10px 10px 5px; " alt="Contact Us">
                                     <div
                                         class="lh-28 last-paragraph-no-margin text-dark-gray ps-15px xs-ps-0 xs-mt-15px">
                                         <p>Save your time and effort spent for finding a solution. <a
