--- a/ProviderServices.html
+++ b/ProviderServices.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -151,7 +151,7 @@
                     <div class="row align-items-center justify-content-center small-screen">
                         <div class="col-lg-8 position-relative text-center page-title-extra-large"
                             data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 600, "delay": 0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                            <h1 class="m-auto text-white text-shadow-double-large fw-600 ls-minus-2px">Provider Services
+                            <h1 class="m-auto text-white text-shadow-double-large fw-600 ls-minus-2px">Our Services
                             </h1>
                         </div>
                         <div class="down-section text-center"
@@ -234,8 +234,6 @@
 
                             <div class="row align-items-center justify-content-center g-0">
                                 <div class="col-12 d-block d-sm-flex align-items-center text-center text-sm-start">
-                                    <img src="Images/pexels-janson-a-207878-753695.jpg"
-                                        style="border-radius: 5px; box-shadow: 10px 10px 5px; " alt="Contact Us">
                                     <div
                                         class="lh-28 last-paragraph-no-margin text-dark-gray ps-15px xs-ps-0 xs-mt-15px">
                                         <p>Save your time and effort spent for finding a solution. <a
