--- a/Home/WhatMakesUsUnique.html
+++ b/Home/WhatMakesUsUnique.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -104,6 +104,7 @@
                                     <i class="fa-solid fa-angle-down dropdown-toggle" id="PayerSolutionsLink"
                                         role="button" data-bs-toggle="dropdown" aria-expanded="false"></i>
                                     <ul class="dropdown-menu" aria-labelledby="PayerSolutionsLink">
+                                        <li><a href="../PayerSolutions/MAO.html">HCC Coding & Medicare Advantage</a>
                                         <li><a href="../PayerSolutions/WorkmenCompensation.html">Workers' Compensation &
                                                 Auto Insurance</a></li>
                                         <li><a href="../PayerSolutions/MedicalReview.html">Medical Review & Claim
@@ -112,12 +113,10 @@
                                                 Services</a></li>
                                         <li><a href="../PayerSolutions/FormConversion.html">CMS-1500/UB-04 Elec. Data
                                                 Form Conversion</a></li>
-                                        <li><a href="../PayerSolutions/MAO.html">HCC Coding & Medicare Advantage</a>
                                         </li>
                                     </ul>
-                                <li class="nav-item"><a href="WhatMakesUsUnique.html" class="nav-link">Why Us Over
-                                        All?</a></li>
 
+                                    <li class="nav-item"><a href="WhatMakesUsUnique.html" class="nav-link">Why Us Over All?</a></li>
                                 <li class="nav-item"><a href="Contact.html" class="nav-link">Contact</a></li>
                             </ul>
                         </div>
@@ -125,6 +124,7 @@
                     <div class="col-auto col-xl-3 col-lg-2 text-end md-pe-0">
                         <div class="header-icon">
                             <div class="header-search-icon icon">
+
                             </div>
                             <div class="header-button ms-20px d-none d-xl-inline-block">
                                 <a href="Contact.html"
@@ -155,7 +155,7 @@
                     <div class="row align-items-center justify-content-center small-screen">
                         <div class="col-lg-8 position-relative text-center page-title-extra-large"
                             data-anime='{ "el": "childs", "translateY": [50, 0], "opacity": [0,1], "duration": 600, "delay": 0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                            <h1 class="m-auto text-white text-shadow-double-large fw-600 ls-minus-2px">Why Us Over All?
+                            <h1 class="m-auto text-white text-shadow-double-large fw-600 ls-minus-2px">The Advantage we offer
                             </h1>
                         </div>
                         <div class="down-section text-center"
@@ -179,8 +179,7 @@
                             <span
                                 class="ps-25px pe-25px mb-20px text-uppercase text-base-color fs-14 lh-42px fw-700 border-radius-100px bg-gradient-very-light-gray-transparent d-inline-block">About
                                 Dynamic IT Healthcare</span>
-                            <h3 class="text-dark-gray fw-700 mb-0 ls-minus-1px">Powerful agency for managing healthcare
-                                services.</h3>
+                            <h3 class="text-dark-gray fw-700 mb-0 ls-minus-1px">Your Trusted Ally in Healthcare Operations.</h3>
                         </div>
                         <div
                             class="col-xl-6 col-lg-6 col-md-10 offset-xl-1 text-center text-lg-start last-paragraph-no-margin">
@@ -201,7 +200,7 @@
                                         src="../Images/demo-corporate-about-icon-01.jpg" alt="">
                                 </div>
                                 <div class="feature-box-content">
-                                    <span class="d-block fs-19 fw-700 text-dark-gray mb-5px">Global Presence</span>
+                                    <span class="d-block fs-19 fw-700 text-dark-gray mb-5px">Global Network</span>
                                     <p>Round-the-clock business operations with executive leadership based out of the US
                                         and India.</p>
                                 </div>
@@ -216,7 +215,7 @@
                                         src="../Images/demo-corporate-about-icon-02.jpg" alt="">
                                 </div>
                                 <div class="feature-box-content">
-                                    <span class="d-block fs-19 fw-700 text-dark-gray mb-5px">Scalable Manpower</span>
+                                    <span class="d-block fs-19 fw-700 text-dark-gray mb-5px">Agile Talent Pool</span>
                                     <p>Start small and scale-up as you grow. We are with you on every step of your
                                         success.</p>
                                 </div>
@@ -247,8 +246,7 @@
                                         src="../Images/demo-corporate-about-icon-04.jpg" alt="">
                                 </div>
                                 <div class="feature-box-content">
-                                    <span class="d-block fs-19 fw-700 text-dark-gray mb-5px">Service Levels and
-                                        Transparency</span>
+                                    <span class="d-block fs-19 fw-700 text-dark-gray mb-5px">Delivery Standards and Honest Communication</span>
                                     <p>24/7/365 business support. Our transparent process methodology empowers you to
                                         take control of your complex business processes.</p>
                                 </div>
@@ -272,9 +270,8 @@
                                 </div>
                                 <div
                                     class="feature-box-content last-paragraph-no-margin text-dark-gray text-uppercase fs-15 fw-700 ls-05px">
-                                    Let's make something great and work together. <a href="Contact.html"
-                                        class="text-base-color text-decoration-line-bottom-medium border-1">Got a
-                                        project in mind?</a>
+                                    want to connect ?<a href="Contact.html"
+                                        class="text-base-color text-decoration-line-bottom-medium border-1"> Contact Us.</a>
                                 </div>
                             </div>
                         </div>
@@ -538,19 +535,21 @@
                         <!-- start footer column -->
                         <div
                             class="col-6 col-xl-3 col-lg-12 col-sm-6 last-paragraph-no-margin text-xl-start text-lg-center order-sm-1 lg-mb-50px sm-mb-30px">
-                            <a href="../Home.html" class="footer-logo mb-15px d-inline-block"><img
-                                    src="../Images/logo.jpg" alt="Dynamic IT Healthcare" style="min-height: 85px"></a>
+                            <a href="Home.html" class="footer-logo mb-15px d-inline-block"><img src="Images/logo.jpg"
+                                    alt="Dynamic IT Healthcare" style="min-height: 85px"></a>
                             <p class="lh-30 w-100 xl-w-100 mx-lg-auto mx-xl-0">New Perspectives. Global Success.</p>
                             <div class="elements-social social-icon-style-02 mt-20px xs-mt-15px">
                                 <ul class="medium-icon dark">
-                                    <li class="my-0"><a class="facebook" href="https://www.facebook.com/"
+                                    <li class="my-0"><a class="facebook"
+                                            href="https://www.facebook.com/"
                                             target="_blank" rel="noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
                                     </li>
-                                    <li class="my-0"><a class="linkedin" href="https://www.linkedin.com/company/"
+                                    <li class="my-0"><a class="linkedin"
+                                            href="https://www.linkedin.com/company/"
                                             target="_blank" rel="noreferrer"><i class="fa-brands fa-linkedin"></i></a>
                                     </li>
-                                    <li class="my-0"><a class="twitter" href="https://twitter.com/" target="_blank"
-                                            rel="noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
+                                    <li class="my-0"><a class="twitter" href="https://twitter.com/"
+                                            target="_blank" rel="noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
                                     </li>
                                     <!-- <li class="my-0"><a class="instagram" href="#"><i class="fa-brands fa-instagram"></i></a></li> -->
                                 </ul>
@@ -561,8 +560,8 @@
                         <div class="col-6 col-xl-2 col-lg-3 col-sm-4 xs-mb-30px order-sm-3 order-lg-2">
                             <span class="fs-17 fw-600 d-block text-dark-gray mb-5px">Company</span>
                             <ul>
-                                <li><a href="../Home/WhyChooseUs.html">Why Choose Us</a></li>
-                                <li><a href="../Home/Contact.html">Contact us</a></li>
+                                <li><a href="../Home/WhatMakesUsUnique.html">Why Us Over All?</a></li>
+                                <li><a href="Home/Contact.html">Contact us</a></li>
                             </ul>
                         </div>
                         <!-- end footer column -->
@@ -570,9 +569,9 @@
                         <div class="col-6 col-xl-2 col-lg-3 col-sm-4 xs-mb-30px order-sm-4 order-lg-3">
                             <span class="fs-17 fw-600 d-block text-dark-gray mb-5px">Services</span>
                             <ul>
-                                <li><a href="../ProviderServices.html">Provider Services</a></li>
-                                <li><a href="../PayerSolutions.html">Payer Solutions</a></li>
-                                <li><a href="../ProviderServices/LaboratoryServices.html">Laboratory Services</a></li>
+                                <li><a href="ProviderServices.html">Provider Services</a></li>
+                                <li><a href="PayerSolutions.html">Payer Solutions</a></li>
+                                <li><a href="ProviderServices/LaboratoryServices.html">Laboratory Services</a></li>
                             </ul>
                         </div>
                         <!-- end footer column -->
@@ -580,16 +579,16 @@
                         <div class="col-6 col-xl-2 col-lg-3 col-sm-4 xs-mb-30px order-sm-5 order-lg-4">
                             <span class="fs-17 fw-600 d-block text-dark-gray mb-5px">Customer</span>
                             <ul>
-                                <li><a href="../Home/PrivacyPolicy.html">Privacy policy</a></li>
-                                <li><a href="../Home/TermsAndConditions.html">Terms and conditions</a></li>
-                                <li><a href="../Home/Contact.html">Feedback</a></li>
+                                <li><a href="Home/PrivacyPolicy.html">Privacy policy</a></li>
+                                <li><a href="Home/TermsAndConditions.html">Terms and conditions</a></li>
+                                <li><a href="Home/Contact.html">Feedback</a></li>
                             </ul>
                         </div>
                         <!-- end footer column -->
                         <!-- start footer column -->
                         <div class="col-xl-3 col-lg-3 col-sm-6 md-mb-50px sm-mb-30px xs-mb-0 order-sm-2 order-lg-5"
                             style="margin-top:-20px">
-                            <img src="../Images/qrcode_dynamicithealthcare.com.png" alt="Dynamic IT Healthcare">
+                            <img src="Images/qrcode_dynamicithealthcare.com.png" alt="Dynamic IT Healthcare">
                         </div>
                         <!-- end footer column -->
                     </div>
@@ -610,7 +609,8 @@
                         <!-- start powered by -->
                         <div
                             class="col-lg-6 pt-35px pb-35px md-pt-0 order-3 order-lg-3 text-center text-lg-end last-paragraph-no-margin">
-                            <text>Powered by <a href="#" target="_blank" rel="noopener noreferrer"
+                            <text>Powered by <a href="#" target="_blank"
+                                    rel="noopener noreferrer"
                                     class="text-dark-gray fw-600 text-decoration-line-bottom">RamaMano</a></text>
                         </div>
                         <!-- end  powered by -->
