--- a/Home/WhatMakesUsUnique.html
+++ b/Home/WhatMakesUsUnique.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -535,7 +535,7 @@
                         <!-- start footer column -->
                         <div
                             class="col-6 col-xl-3 col-lg-12 col-sm-6 last-paragraph-no-margin text-xl-start text-lg-center order-sm-1 lg-mb-50px sm-mb-30px">
-                            <a href="Home.html" class="footer-logo mb-15px d-inline-block"><img src="Images/logo.jpg"
+                            <a href="Home.html" class="footer-logo mb-15px d-inline-block"><img src="../Images/logo.jpg"
                                     alt="Dynamic IT Healthcare" style="min-height: 85px"></a>
                             <p class="lh-30 w-100 xl-w-100 mx-lg-auto mx-xl-0">New Perspectives. Global Success.</p>
                             <div class="elements-social social-icon-style-02 mt-20px xs-mt-15px">
@@ -560,8 +560,8 @@
                         <div class="col-6 col-xl-2 col-lg-3 col-sm-4 xs-mb-30px order-sm-3 order-lg-2">
                             <span class="fs-17 fw-600 d-block text-dark-gray mb-5px">Company</span>
                             <ul>
-                                <li><a href="../Home/WhatMakesUsUnique.html">Why Us Over All?</a></li>
-                                <li><a href="Home/Contact.html">Contact us</a></li>
+                                <li><a href="WhatMakesUsUnique.html">Why Us Over All?</a></li>
+                                <li><a href="Contact.html">Contact us</a></li>
                             </ul>
                         </div>
                         <!-- end footer column -->
@@ -569,9 +569,9 @@
                         <div class="col-6 col-xl-2 col-lg-3 col-sm-4 xs-mb-30px order-sm-4 order-lg-3">
                             <span class="fs-17 fw-600 d-block text-dark-gray mb-5px">Services</span>
                             <ul>
-                                <li><a href="ProviderServices.html">Provider Services</a></li>
-                                <li><a href="PayerSolutions.html">Payer Solutions</a></li>
-                                <li><a href="ProviderServices/LaboratoryServices.html">Laboratory Services</a></li>
+                                <li><a href="../ProviderServices.html">Provider Services</a></li>
+                                <li><a href="../PayerSolutions.html">Payer Solutions</a></li>
+                                <li><a href="../ProviderServices/LaboratoryServices.html">Laboratory Services</a></li>
                             </ul>
                         </div>
                         <!-- end footer column -->
@@ -579,16 +579,16 @@
                         <div class="col-6 col-xl-2 col-lg-3 col-sm-4 xs-mb-30px order-sm-5 order-lg-4">
                             <span class="fs-17 fw-600 d-block text-dark-gray mb-5px">Customer</span>
                             <ul>
-                                <li><a href="Home/PrivacyPolicy.html">Privacy policy</a></li>
-                                <li><a href="Home/TermsAndConditions.html">Terms and conditions</a></li>
-                                <li><a href="Home/Contact.html">Feedback</a></li>
+                                <li><a href="PrivacyPolicy.html">Privacy policy</a></li>
+                                <li><a href="TermsAndConditions.html">Terms and conditions</a></li>
+                                <li><a href="Contact.html">Feedback</a></li>
                             </ul>
                         </div>
                         <!-- end footer column -->
                         <!-- start footer column -->
                         <div class="col-xl-3 col-lg-3 col-sm-6 md-mb-50px sm-mb-30px xs-mb-0 order-sm-2 order-lg-5"
                             style="margin-top:-20px">
-                            <img src="Images/qrcode_dynamicithealthcare.com.png" alt="Dynamic IT Healthcare">
+                            
                         </div>
                         <!-- end footer column -->
                     </div>
